Fixed the issues on ios - console.warn was breaking

--- a/card-templates/mandarin/reading.css
+++ b/card-templates/mandarin/reading.css
@@ -119,6 +119,12 @@
   font-size: 3em;
 }
 
+#char_deck {
+  margin-top: 10px;
+  font-size: 10px;
+  font-style: italic;
+}
+
 /* Windows */
 .win .char-card {
   font-family: "AR PL KaitiM GB", "AR PL KaitiM Big5";
